Finish GetDistance function
