# model/Location.go
@@ -2,8 +2,10 @@ package model
 
 import (
 	"encoding/json"
+	"fmt"
 	"github.com/kvendingoldo/gu-location-service/config"
 	guErrors "github.com/kvendingoldo/gu-location-service/internal/errors"
+	"github.com/kvendingoldo/gu-location-service/pkg/distance"
 
 	"time"
 )
@@ -37,4 +39,40 @@ func UpdateLocation(location *Location) (err error) {
 	}
 
 	return
+}
+
+// GetDistance ... Get user distance in Km by range
+func GetDistance(uid int, timeRange string) (float64, error) {
+	locations, err := getLocationsByRange(uid, timeRange)
+	if err != nil {
+		fmt.Println(err)
+	}
+
+	coordinates := []string{}
+	for _, location := range locations {
+		coordinates = append(coordinates, location.Coordinates)
+	}
+
+	distanceKm, err := distance.CalculateDistanceInKm(coordinates)
+	if err != nil {
+		fmt.Println(err)
+	}
+
+	return distanceKm, nil
+}
+
+// getLocationsByRange ... Get list of user's location by range
+func getLocationsByRange(uid int, timeRange string) ([]Location, error) {
+	var locations []Location
+
+	delta, err := time.ParseDuration(timeRange)
+	if err != nil {
+		fmt.Println(err)
+	}
+
+	config.Config.DB.Where(
+		"created_at >= ? and uid = ?", time.Now().Add(delta), uid,
+	).Find(&locations)
+
+	return locations, nil
 }
